# kolokwium_git

zad_4/: main.cpp
zad_5/: CMakeLists.txt  Makefile  employee.h
zad_6/: CMakeLists.txt
